Headless mode of swing functional tests added