@@ -24,8 +24,27 @@
         <jpackager.prefix.all>all</jpackager.prefix.all>
 
         <!-- PROFILE SETTINGS -->
-        <platform.args>--add-opens java.base/java.util=ALL-UNNAMED</platform.args>
-        <platform.headless.args></platform.headless.args>
+        <!-- Needs for Cacio toolkit -->
+        <platform.args>
+            --add-exports=java.desktop/java.awt=ALL-UNNAMED
+            --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
+            --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
+            --add-exports=java.desktop/sun.java2d=ALL-UNNAMED
+            --add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED
+            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+            --add-exports=java.desktop/sun.awt.event=ALL-UNNAMED
+            --add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED
+            --add-exports=java.base/sun.security.action=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.desktop/java.awt=ALL-UNNAMED
+            --add-opens=java.desktop/sun.java2d=ALL-UNNAMED
+            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+        </platform.args>
+        <platform.headless.args>
+            -Dawt.toolkit=com.github.caciocavallosilano.cacio.ctc.CTCToolkit
+            -Djava.awt.graphicsenv=com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment
+            -Djava.awt.headless=false
+        </platform.headless.args>
         <platform.appName>Swing_Demo</platform.appName>
         <platform.mainJar>${project.artifactId}-${project.version}-${jpackager.prefix.all}.jar</platform.mainJar>
         <platform.mainClass>org.example.astero_demo.SwingMain</platform.mainClass>
@@ -120,6 +139,12 @@
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-suite</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit.platfrom.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.assertj</groupId>
@@ -128,9 +153,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-swing-junit</artifactId>
-            <version>${assertj.version}</version>
+            <groupId>tokyo.northside</groupId>
+            <artifactId>assertj-swing-junit-jupiter</artifactId>
+            <version>4.0.0-beta-3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.caciocavallosilano</groupId>
+            <artifactId>cacio-tta</artifactId>
+            <version>1.18</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
